Closed Bug 543831 Opened 16 years ago Closed 16 years ago

[OOPP] hang with embedded youtube video

Categories

(Core :: IPC, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Tracking Status
blocking2.0 --- alpha1+

People

(Reporter: ted, Assigned: jimm)

References

()

Details

Attachments

(2 files, 3 obsolete files)

Attached file parent/child stacks
Watching the video in the URL field, I clicked "pause", and the audio continued for a few seconds, and the entire browser became unresponsive. I got stacks for the parent and child, they're attached. Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20100201 Minefield/3.7a1pre
blocking2.0: --- → alpha1
I've been able to reproduce this some times. Using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.3a1pre) Gecko/20100202 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Attached patch CallSetPluginFocus patch (obsolete) — Splinter Review
Attachment #425057 - Flags: review?(bent.mozilla)
missed a qrefresh on better commenting.
Attached patch CallSetPluginFocus patch (obsolete) — Splinter Review
lets try that one more time.
Assignee: nobody → jmathies
Attachment #425057 - Attachment is obsolete: true
Attachment #425058 - Attachment is obsolete: true
Attachment #425081 - Flags: review?(bent.mozilla)
Attachment #425057 - Flags: review?(bent.mozilla)
Attachment #425081 - Flags: review?(bent.mozilla) → review+
Attached patch patchSplinter Review
Attachment #425081 - Attachment is obsolete: true
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
(In reply to comment #1) > Bug 543819 is related ? Appears not to be related, I'm running latest hourly with this build, and I can still hang the browser when switching tabs with Youtube video playing. All seems OK if you don't change tabs during play. Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20100204 Minefield/3.7a1pre cset: http://hg.mozilla.org/mozilla-central/rev/afcab1750522
Again, maybe unrelated but on home build of Trunk I get stuttering. Moving mouse over timeline seems to unstick the playing. This with: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.3a1pre) Gecko/20100204 Minefield/3.7a1pre ID:20100204073058
(In reply to comment #9) > Again, maybe unrelated but on home build of Trunk I get stuttering. Moving > mouse over timeline seems to unstick the playing. This with: Mozilla/5.0 (X11; > U; Linux i686; en-US; rv:1.9.3a1pre) Gecko/20100204 Minefield/3.7a1pre > ID:20100204073058 If OOPP doesn't have a bug on this already, we should split this out. This bug was win only, so if we have problems on Linux, we'll have to fix separately.
The original problem reported in comment 0 is now fixed on Windows 7. Verified on Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a1pre) Gecko/20100205 Minefield/3.7a1pre (.NET CLR 3.5.30729)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: