Bug 543831 - [OOPP] Hang with embedded youtube video. r=bent.